--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </section>
             <section class="spaceships">
                 <div class="spaceships__img" width=290px height=219px>
-                    <img src="/img/kissclipart-kid-space-shuttle-clipart-space-shuttle-the-space-4ae7806340e924a6.png" alt="image of spaceship">
+                    <img src="./img/kissclipart-kid-space-shuttle-clipart-space-shuttle-the-space-4ae7806340e924a6.png" alt="image of spaceship">
                 </div>
                 <div class="spaceships__content">
                     <h2>
