--- a/location.html
+++ b/location.html
@@ -49,10 +49,10 @@
                         <p>Adress:<span id="address"></span></p>
                     </div>
                     <div class="address-contacts">
-                        <a class="address-mailto" href="mailto: anastasibohdan45@gmail.com" id="email"></a>
+                        <a href="mailto: anastasibohdan45@gmail.com" id="email"></a>
                     </div>
                 </div>
-                <form class="address-form">
+                <form class="address-form" action="mailto: anastasibohdan45@gmail.com">
                     <input class="address-name" type="text" name="full_name" placeholder="Full Name">
                     <input class="address-email" type="email" name="email" placeholder="E-mail">
                     <textarea class="address-message" type="text" name="message" placeholder="Message" rows="7"></textarea>
