--- a/location.html
+++ b/location.html
@@ -52,7 +52,7 @@
                         <a href="mailto: anastasibohdan45@gmail.com" id="email"></a>
                     </div>
                 </div>
-                <form class="address-form" action="mailto: anastasibohdan45@gmail.com">
+                <form class="address-form" action="">
                     <input class="address-name" type="text" name="full_name" placeholder="Full Name">
                     <input class="address-email" type="email" name="email" placeholder="E-mail">
                     <textarea class="address-message" type="text" name="message" placeholder="Message" rows="7"></textarea>
