--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </section>
             <section class="planets">
-                <h2>Visited Planets</h2>
+                <h2>Anastasia System Planets</h2>
                 <div class="planets__wrapper" id="planets">
                     
                 </div>
