--- a/planets.html
+++ b/planets.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Anastasia System</title>
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/planets_style.css">
         <link rel="icon" href="/favicon.ico"> 
     </head>
     <body scroll="no">
@@ -40,7 +41,7 @@
             </nav>
         </header>
         <main class="page_main">
-            <h2>Finished Modules</h2>
+            <h2>My Modules</h2>
             <div id="my_planets" class="page_main"></div>
         </main>
         <footer>
